[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyterlab = "^3.2.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
invoke = "^1.6.0"
kaggle = "^1.5.12"
dask = {extras = ["distributed"], version = "^2021.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
